# Notix

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 1cc78c8b43c1_add_uuid7_extension.py  1e2c55d9225f_initial_database_setup.py  64ae63108786_set_nullable_constraint_to_true_on_.py  7b088a910f87_add_status_delivered_at_failed_at_columns_to_emails_table.py  8675ab597a4b_add_webhook_endpoints_table_to_db_and_failed_at_column_to_notifications.py  94eeb206588e_change_processed_emails_column_to_.py  a5fa0b0e6101_create_composite_index_on_api_keys.py  de7ab861988e_add_payload_column_to_notifications_.py
app/: deps.py  limiter.py  main.py  util.py
app/api/models/: __init__.py  api_key.py  api_keys.py  email.py  notification.py  notifications.py  otp.py  users.py  webhook.py
app/api/repo/: api_key.py  base.py  email.py  notification.py  redis.py  user_repo.py  webhook.py
app/api/routers/: auth.py  notification.py  router.py  webhook.py
app/api/schemas/: api_key.py  auth.py  email.py  notification.py  response.py  user.py  webhook.py
app/api/services/: api_key.py  auth.py  auth_service.py  channel.py  email.py  notification.py  otp.py  request.py  user.py  user_service.py  webhook.py
app/core/: config.py  exception_handlers.py  exceptions.py  security.py
app/worker/: __init__.py  celery_app.py  celeryconfig.py
app/worker/tasks/: base.py  digest.py  dlq.py  email.py  services.py  webhook.py
test/: conftest.py  test_auth.py  test_notification.py  test_webhook.py  test_worker.py
