[project]
name = "notix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.138.0",
    "psycopg>=3.3.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
