[project]
name = "notix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "celery>=5.6.3",
    "fastapi[all]>=0.138.0",
    "gevent>=26.5.0",
    "honcho>=2.0.0",
    "pika>=1.4.1",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "resend>=2.32.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
]
